# farmededinheiro

./: Procfile  Procfile.txt  README.md  active_trading_system.py  api_integrations.py  app.py  app_active.py  bitget_api.py  bot_to_fix.py  config.py  dashboard.html  gemini_handler.py  main.py  models.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  render.yaml  replit.md  requirements.txt  risk_manager.py  routes.py  routes.ts  runtime.txt  scalping_bot.py  signal_scorer.py  socketio_manager.py  tailwind.config.ts  technical_analysis.py  trading_bot.py  websocket_handler.py
.github/workflows/: autofix.yml
client/src/: App.tsx  index.css
client/src/components/: ActivityLog.tsx  BotControls.tsx  CurrentPosition.tsx  MainContent.tsx  PerformanceCards.tsx  Sidebar.tsx  TradingDashboard.tsx  header.tsx
client/src/hooks/: useTradlingData.ts  usesocket.ts
client/src/types/: trading.ts
farmededinheiro /: ai_fix_bot.py
static/css/: style.css
static/js/: app.js
templates/: 404.html  base.html  dashboard.html  error.html  index.html
