[project]
name = "trading-bot-eth-usdt"
version = "1.0.0"
description = "Bot de trading ETH/USDT com alavancagem fixa 10x"
authors = [
    {name = "Trading Bot", email = "bot@trading.com"}
]
dependencies = [
    "flask>=2.3.0",
    "requests>=2.31.0",
    "asyncio",
    "websocket-client>=1.6.0"
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
